@@ -1,5 +1,12 @@
 2008-07-27  Mirco Bauer <meebey@meebey.net> 
 
+	* IrcGroupChatView.cs: Implemented selecting multiple person in a group
+	  chat. (closes trac bug #73)
+	
+	  Refactored person context menu commands to support a list of persons.
+
+2008-07-27  Mirco Bauer <meebey@meebey.net> 
+
 	* Frontend-GNOME-IRC.mdp: Removed assembly attributes that are now part of
 	  the shared AssemblyVersion.cs file.
 
